package quartaAI.MonitoraggioPrigione;

public interface Accendibile {
    public void accendi();
    public void spegni();
}
