package quartaAI.MonitoraggioPrigione;

public class SensoreMovimento extends Sensore {

    @Override
    public void accendi() {

    }

    @Override
    public void spegni() {

    }

    @Override
    public void eseguiDiagnostica() {

    }

    public boolean rilevaMovimento(){
        return false;
    }
}
