package quartaAI.MonitoraggioPrigione;

public class SensoreTemperatura extends Sensore {

    @Override
    public void accendi() {

    }

    @Override
    public void spegni() {

    }

    @Override
    public void eseguiDiagnostica() {

    }

    public float rilevaTemperatura() {
        return 0.0F;
    }
}
